--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,18 @@ x-app-common: &app-common
   build:
     context: .
     dockerfile: Dockerfile
-  environment:
-    - BUILD_ENV
-    - BRANCH_SLUG
   env_file: .env
   tty: true
   privileged: true
   depends_on:
     - db
+  restart: unless-stopped
+  stdin_open: true
 
 services:
   api:
     <<: *app-common
-    entrypoint: /app/entrypoint.sh
+#    entrypoint: /app/entrypoint.sh
   cli:
     <<: *app-common
     command: echo "Starting cli container..."
